<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.0</version>
        <relativePath/>
    </parent>

    <groupId>com.longvin.trading</groupId>
    <artifactId>longvin-trading</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>longvin-trading</name>
    <packaging>pom</packaging>

    <properties>
        <java.version>17</java.version>
        <frontend-maven-plugin.version>1.15.0</frontend-maven-plugin.version>
        <quickfixj.version>2.3.1</quickfixj.version>
    </properties>

    <modules>
        <module>ui</module>
        <module>backend</module>
    </modules>
</project>

